# Subway

./: .gitignore  css.md  ddl.sql  package-lock.json  출처.md  쿼리.sql
backend/: .env  db.py  main.py  pyproject.toml  settings.py
backend/data/: 2008~2021_holidays.csv  seoulmetro_coordinate_2025.csv
backend/routers/: data.py  spark.py  total.py
backend/sql/: queries.py
backend/함수 사용법/: file_upload.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/assets/: Dashboard.css  card.md
frontend/src/pages/: Card.jsx  Maps.jsx
발표자료/: package-lock.json  package.json  계획.md
발표자료/flight_metro/: package-lock.json  package.json  slides.md
